<resources>
    <string name="app_name">Schleep</string>
    <string name="title_activity_create_alarm">CreateAlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_alarm">Add Alarm</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sheepContentDescription">sheep</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="task">Task</string>
    <string name="none">None</string>
    <string name="name_of_alarm">Name of alarm</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="snooze">Snooze</string>
    <string name="sounds">Sounds</string>
    <string name="default_sounds">Default</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="schleep">Schleep</string>
    <string name="channel_name">Schleep</string>
    <string name="prompt_instructions">Type the prompt to turn off the alarm:</string>
    <string name="title_activity_select_task">SelectTask</string>
</resources>
