<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.schleep.CreateAlarmActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/repeat3"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/task"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/underline"
        android:text="@string/repeat"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="415dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/create_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_alarm"
            android:textSize="30sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="67dp"
        android:text="@string/time"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="111dp"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/time_picker"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/name_alarm_create"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/time_picker"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:gravity="end"
        android:text="@string/name_of_alarm"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/fadedWords" />

    <TextView
        android:id="@+id/task"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/name_alarm_create"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/underline"
        android:text="@string/task"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/task_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Snooze"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        android:background="@color/cardview_light_background"
        android:gravity="end"
        android:text="@string/none"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/fadedWords"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/Snooze"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/repeat3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/underline"
        android:text="@string/snooze"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Sound"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/Snooze"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/underline"
        android:text="Sound"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/task_button_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Sound"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        android:background="@color/cardview_light_background"
        android:gravity="end"
        android:text="Default"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/fadedWords"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/task_button_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/repeat3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        android:background="@color/cardview_light_background"
        android:gravity="end"
        android:text="Never"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/fadedWords"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/task_button_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/task"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        android:background="@color/cardview_light_background"
        android:gravity="end"
        android:text="@string/none"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/fadedWords"
        android:textSize="18sp" />
    <!--
    -->

</RelativeLayout>